--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 
 .DS_Store
 Arduino/.DS_Store
+GUI/packages/__pycache__/__init__.cpython-310.pyc
+GUI/packages/camera/__pycache__/cam.cpython-38.pyc
+GUI/packages/closed_loop/__pycache__/PIDs.cpython-310.pyc
+GUI/packages/gamepad/__pycache__/interpreter.cpython-38.pyc
+GUI/packages/models/__pycache__/__init__.cpython-310.pyc
+GUI/packages/models/__pycache__/input.cpython-310.pyc
+GUI/packages/models/__pycache__/generator.cpython-310.pyc
+GUI/packages/models/__pycache__/generator.cpython-38.pyc
+*.pyc
